# fair-teams

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  docker-compose.yml
src/: lib.rs  main.rs  static_files.rs
src/api/: auth.rs  mod.rs  sessions.rs  teams.rs
src/db/: mod.rs  mongo.rs
src/teams/: generation.rs  mod.rs  models.rs  mongo.rs
src/tournament/: mod.rs  models.rs  round_robin.rs
templates/: admin.css  admin.html.tera  index.html.tera  index.js  logged_in.html.tera  profile.css  profile.html.tera  ratings.html.tera  style.css
