[package]
name = "fair_teams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
serde_json = "1.0.107"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4"] }
mongodb = "2.6.1"
serde = "1.0.188"
rand = "0.8.5"
chrono = "0.4.31"
bson = { version = "2.7.0", features = ["chrono-0_4"]}
